# holonomy-harmony

./: README.md  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: ci.yml
docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
examples/: analyze_famous.py  basic_harmony.py  coltrane_vs_pachelbel.py  modulation_detection.py  progression.py  voice_leading.py
holonomy_harmony/: __init__.py  analyzer.py  cycle_checker.py  flow.py  tonal_graph.py  topology.py
holonomy_harmony.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_analyzer.py  test_cycle_checker.py  test_flow.py  test_tonal_graph.py  test_topology.py
